[package]
name = "komorebi"
version = "0.1.0"
authors = ["Alessandro Vannini EON <52455952+AlessandroVanniniEON@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "*"
glium = "*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
tobj = "*"